--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -7,7 +7,7 @@ html, body{
     color: #fff;
 }
 .navbar-top{
-    background: linear-gradient(152.97deg, rgba(21, 21, 21, 0.2) 0%, rgba(21, 21, 21, 0) 100%);
+    background: #1A1A1A;
     backdrop-filter: blur(42px);
     height: 70px;
     color: #fff;
